<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"

    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/are_you_ready_fo_exams"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toStartOf="@+id/textView3"

                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        tools:text="00" />


                    <TextView
                        android:id="@+id/tv_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toStartOf="@+id/textView4"

                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3"

                        tools:text="00" />

                    <TextView
                        android:id="@+id/tv_minutes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView3"

                        tools:text="00" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="20dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_days"
                        app:layout_constraintEnd_toStartOf="@+id/tv_hours"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tv_days"
                        app:layout_constraintTop_toTopOf="@+id/tv_days"
                        android:text="@string/_dot_dot" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="20dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_days"
                        app:layout_constraintEnd_toStartOf="@+id/tv_minutes"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tv_hours"
                        app:layout_constraintTop_toTopOf="@+id/tv_days"
                        android:text="@string/_dot_dot" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/days"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_days"
                        app:layout_constraintStart_toStartOf="@+id/tv_days"
                        app:layout_constraintTop_toBottomOf="@+id/tv_days" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hours"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_hours"
                        app:layout_constraintStart_toStartOf="@+id/tv_hours"
                        app:layout_constraintTop_toBottomOf="@+id/tv_days" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/minutes"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_minutes"
                        app:layout_constraintStart_toStartOf="@+id/tv_minutes"
                        app:layout_constraintTop_toBottomOf="@+id/tv_days" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/classes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/classes"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/tv_classes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/classes"
                app:layout_constraintEnd_toStartOf="@+id/classes_today"
                app:layout_constraintTop_toTopOf="@+id/classes"
                tools:text="6" />

            <TextView
                android:id="@+id/classes_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_today"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/classes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/classes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_classes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_classes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classes" />

            <TextView
                android:id="@+id/homework"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/homework"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_classes" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_homework"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homework" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</FrameLayout>